--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -24,6 +24,14 @@
 		<spring.boot.admin.client.version>1.3.2</spring.boot.admin.client.version>
 		<woniu.cbss.init.version>0.0.1</woniu.cbss.init.version>
 		<jpa.persistence.version>2.1.1</jpa.persistence.version>
+		<redis.client.version>2.8.1</redis.client.version>
+		<spring.data.redis.version>1.7.1.RELEASE</spring.data.redis.version>
+		<perf4j.version>0.9.16</perf4j.version>
+		<jexl.version>1.1</jexl.version>
+		<oracle.client.version>11.2.0.3</oracle.client.version>
+		<commons-codec.version>1.10</commons-codec.version>
+		<curator.version>3.1.0</curator.version>
+		<commons-net.version>3.5</commons-net.version>
 	</properties>
 
 	<modules>
@@ -32,6 +40,7 @@
 		<module>sncp-alarm</module>
 		<module>sncp-exception</module>
 		<module>sncp-cloud-config</module>
+		<module>sncp-ocp-security</module>
 	</modules>
 
 	<dependencies>
