--- a/sncp-service/sncp-passport/passport-dubbo/pom.xml
+++ b/sncp-service/sncp-passport/passport-dubbo/pom.xml
@@ -34,12 +34,12 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-redis</artifactId>
-			<version>1.7.1.RELEASE</version>
+			<version>${spring.data.redis.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.8.1</version>
+			<version>${redis.client.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.woniu.cbss</groupId>
@@ -108,12 +108,12 @@
 		<dependency>
 			<groupId>org.perf4j</groupId>
 			<artifactId>perf4j</artifactId>
-			<version>0.9.16</version>
+			<version>${perf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-jexl</groupId>
 			<artifactId>commons-jexl</artifactId>
-			<version>1.1</version>
+			<version>${jexl.version}</version>
 		</dependency>
 	</dependencies>
 
