--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -41,6 +41,7 @@
 		<module>sncp-exception</module>
 		<module>sncp-cloud-config</module>
 		<module>sncp-ocp-security</module>
+		<module>sncp-profile</module>
 	</modules>
 
 	<dependencies>
