--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-wait=3000
 # Maximum number of active connections that can be allocated from this pool at the same time.
 spring.datasource.max-active=50
+spring.datasource.connection-test-query=SELECT 1
+spring.datasource.test-while-idle=true
 # Validate the connection before borrowing it from the pool.
 spring.datasource.test-on-borrow=true
 spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
