--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
@@ -6,14 +6,18 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
-spring.datasource.max-wait=3000
+spring.datasource.tomcat.max-wait=3000
 # Maximum number of active connections that can be allocated from this pool at the same time.
-spring.datasource.max-active=50
-spring.datasource.connection-test-query=SELECT 1
-spring.datasource.test-while-idle=true
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.connection-test-query=SELECT 1
+spring.datasource.tomcat.test-while-idle=true
 # Validate the connection before borrowing it from the pool.
-spring.datasource.test-on-borrow=true
-spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
+spring.datasource.tomcat.test-on-borrow=true
+
+#spring.datasource.hikari.cachePrepStmts=true
+#spring.datasource.hikari.prepStmtCacheSize=250
+#spring.datasource.hikari.prepStmtCacheSqlLimit=2048
+#spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
 
 #metrics
 cbss.api.application.heart.conf.metricUrl=http://124.202.142.136:81/api/push_monitor/
