--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application.properties
@@ -32,7 +32,7 @@ cbss.api.threadpool.conf.blockingQueueNum=50
 cbss.api.application.heart.conf.metricUrl=http://monitor.yunwei.woniu.com:81/api/push_monitor/
 cbss.api.application.heart.conf.metricType=sncp.mirco.heart
 cbss.api.application.heart.conf.tags=desc=@project.description@,version=@project.version@
-security.ignored=/cbss/api/**
+security.ignored=/cbss/api/**,/test
 security.user.name=cbssapi
 security.user.password=ID)!DFASDPOI!@#
 management.context-path=/management
