--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application.properties
@@ -39,3 +39,15 @@ management.context-path=/management
 management.addApplicationContextHeader=false
 spring.boot.admin.url=http://console.micro.woniu.com/
 spring.boot.admin.client.prefer-ip=true
+
+#mysql datasource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.tomcat.max-wait=3000
+# Maximum number of active connections that can be allocated from this pool at the same time.
+spring.datasource.tomcat.max-active=200
+spring.datasource.tomcat.connection-test-query=SELECT 1
+spring.datasource.tomcat.test-while-idle=true
+# Validate the connection before borrowing it from the pool.
+spring.datasource.tomcat.test-on-borrow=true 
