--- a/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/src/main/resources/application.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-info.info=\u9632\u6c89\u8ff7api\u4e1a\u52a1
+info.info=\u914d\u7f6eapi\u4e1a\u52a1
 info.version=@pom.version@
 
 info.build.artifact=@project.artifactId@
@@ -83,3 +83,9 @@ cbss.api.threadpool.conf.blockingQueueNum=50
 
 cbss.api.access.request.urls[0]=/cbss/api/app/imprest/areas
 cbss.api.access.request.paramTypes[0]=com.woniu.sncp.cbss.api.profile.controller.GameConfRequestDatas
+cbss.api.access.request.urls[1]=/cbss/api/app/imprest/area
+cbss.api.access.request.paramTypes[1]=com.woniu.sncp.cbss.api.profile.controller.GameConfRequestDatas
+cbss.api.access.request.urls[2]=/cbss/api/app/imprest/value
+cbss.api.access.request.paramTypes[2]=com.woniu.sncp.cbss.api.profile.controller.CardConfRequestDatas
+cbss.api.access.request.urls[3]=/cbss/api/app/imprest/allactivity
+cbss.api.access.request.paramTypes[3]=com.woniu.sncp.cbss.api.profile.controller.ActiviyConfRequestDatas
