--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
@@ -6,16 +6,19 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
-spring.datasource.max-wait=30000
+spring.datasource.max-wait=10000
 # Maximum number of active connections that can be allocated from this pool at the same time.
 spring.datasource.max-active=50
 
-spring.datasource.max-idle= 20
-spring.datasource.min-evictable-idle-time-millis=5000
-spring.datasource.min-idle=8
+spring.datasource.max-idle= 10
+spring.datasource.initial-size=5
+
+
 
 # Validate the connection before borrowing it from the pool.
 spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+spring.jpa.show-sql=true
 spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
 
 #metrics
