--- a/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-prod.properties
@@ -2,4 +2,4 @@
 dubbo.zookeeper=zookeeper://192.168.95.120:2181?backup=192.168.95.135:2181,192.168.95.235:2181
 
 #\u76d1\u63a7\u5730\u5740
-alarm.url=http://monitor.yunwei.woniu.com/api/push/
+alarm.url=http://monitor.yunwei.woniu.com:81/api/push/
