--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -42,7 +42,8 @@
 		<module>sncp-cloud-config</module>
 		<module>sncp-ocp-security</module>
 		<module>sncp-profile</module>
-	</modules>
+        <module>sncp-account</module>
+    </modules>
 
 	<dependencies>
 		<dependency>
