--- a/sncp-cashier/cashier-api/src/main/resources/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=@profileActive@
 
 ######### druid \u914d\u7f6e#########
-spring.druid.white.ips=172.18.70.15
-spring.druid.black.ips=
+spring.druid.white.ips=172.18.70.15,127.0.0.1,58.211.28.178
+spring.druid.black.ips=172.18.70.16
 spring.druid.username=admin
 spring.druid.pwd=123456
 
