--- a/sncp-cashier/cashier-api/src/main/resources/dev174/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/dev174/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@profileActive@
 
-spring.http.encoding.charset=UTF-8
+spring.http.encoding.charset=GBK
 
 ######### druid \u914d\u7f6e#########
 spring.druid.white.ips=172.18.70.15,127.0.0.1,58.211.28.178
