--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -274,6 +274,10 @@
 				<targetPath>/message</targetPath>
 			</resource>
 			<resource>
+				<directory>src/main/resources/static</directory>
+				<targetPath>/static</targetPath>
+			</resource>
+			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>*.xml</include>
